--- a/src/main.css
+++ b/src/main.css
@@ -1038,7 +1038,7 @@ video {
   position: relative;
   overflow: hidden;
   background-color: #cb171f;
-  background-image: url(../assets/img/index/bg100.jpg);
+  background-image: url(./assets/img/index/bg100.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
@@ -1073,7 +1073,7 @@ video {
   display: inline-block;
   width: 318px;
   height: 30px;
-  background-image: url('../assets/img/index/text12.png');
+  background-image: url('./assets/img/index/text12.png');
   background-repeat: no-repeat;
   overflow: hidden;
   animation: kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s infinite;
@@ -1082,7 +1082,7 @@ video {
   display: inline-block;
   width: 299px;
   height: 30px;
-  background-image: url('../assets/img/index/text22.png');
+  background-image: url('./assets/img/index/text22.png');
   background-repeat: no-repeat;
   overflow: hidden;
   animation: kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 2s infinite;
@@ -1091,7 +1091,7 @@ video {
   display: inline-block;
   width: 459px;
   height: 30px;
-  background-image: url('../assets/img/index/text32.png');
+  background-image: url('./assets/img/index/text32.png');
   background-repeat: no-repeat;
   overflow: hidden;
   animation: kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 3s infinite;
@@ -1100,7 +1100,7 @@ video {
   display: inline-block;
   width: 547px;
   height: 30px;
-  background-image: url('../assets/img/index/text42.png');
+  background-image: url('./assets/img/index/text42.png');
   background-repeat: no-repeat;
   overflow: hidden;
   animation: kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 4s infinite;
@@ -1253,7 +1253,7 @@ video {
 }
 .about .logo {
   margin-top: 80px;
-  background-image: url('../assets/img/about/logo.png');
+  background-image: url('./assets/img/about/logo.png');
   background-position: center;
   background-repeat: no-repeat;
   height: 700px;
