--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,5 +1,5 @@
-//@import '../js/lib/bootstrap/less-3.3.7/bootstrap.less';
-@import 'common.less';
+@import '../../node_modules/bootstrap/less/bootstrap.less';
+@import './common.less';
 
 // ------------------------------------初始化-----------------------------------------
 html, body {
@@ -267,7 +267,7 @@ video {
   position: relative;
   overflow: hidden;
   background-color: @main-color;
-  background-image: url(../asset/img/index/bg100.jpg);
+  background-image: url(../assets/img/index/bg100.jpg);
   background-repeat: no-repeat;
   background-size: 100% auto;
 
@@ -313,7 +313,7 @@ video {
       display: inline-block;
       width: 318px;
       height: 30px;
-      background-image: url('../asset/img/index/text12.png');
+      background-image: url('../assets/img/index/text12.png');
       background-repeat: no-repeat;
       overflow: hidden;
       animation:kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s infinite;
@@ -323,7 +323,7 @@ video {
       display: inline-block;
       width: 299px;
       height: 30px;
-      background-image: url('../asset/img/index/text22.png');
+      background-image: url('../assets/img/index/text22.png');
       background-repeat: no-repeat;
       overflow: hidden;
       animation:kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 2s infinite;
@@ -333,7 +333,7 @@ video {
       display: inline-block;
       width: 459px;
       height: 30px;
-      background-image: url('../asset/img/index/text32.png');
+      background-image: url('../assets/img/index/text32.png');
       background-repeat: no-repeat;
       overflow: hidden;
       animation:kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 3s infinite;
@@ -343,7 +343,7 @@ video {
       display: inline-block;
       width: 547px;
       height: 30px;
-      background-image: url('../asset/img/index/text42.png');
+      background-image: url('../assets/img/index/text42.png');
       background-repeat: no-repeat;
       overflow: hidden;
       animation:kf-roll 9s cubic-bezier(0.785, 0.135, 0.15, 0.86) 4s infinite;
@@ -547,7 +547,7 @@ video {
 
   .logo {
     margin-top: 80px;
-    background-image: url('../asset/img/about/logo.png');
+    background-image: url('../assets/img/about/logo.png');
     background-position: center;
     background-repeat: no-repeat;
     height: 700px;
