feat: 增加service页 refactor: 抽离swiper组件

--- a/src/main.css
+++ b/src/main.css
@@ -1414,7 +1414,7 @@ video {
 }
 .service .category .result-other {
   min-height: 800px;
-  display: none;
+  /*display: none;*/
 }
 .service .category .result-other .result {
   width: 83.33333333%;
