--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -101,3 +101,9 @@ a { text-decoration:none;}
     clear:both;
     display:block;
 }
+
+.no-more-result {
+    text-align: center;
+    font-size: 20px;
+    padding: 120px;
+}
