--- a/src/styles/mobile-main.less
+++ b/src/styles/mobile-main.less
@@ -152,6 +152,13 @@ html, body {
 
     .row {
         margin-bottom: 20px;
+        a {
+            color: #fff;
+      
+            &:hover {
+              text-decoration: underline;
+            }
+          }
     }
 
     .links img {
@@ -991,6 +998,7 @@ html, body {
 
     .swiper-slide {
         font-size: 0;
+        width: 100%;
         
         img {
             width: 100%;
