--- a/src/styles/pc-main.less
+++ b/src/styles/pc-main.less
@@ -141,6 +141,14 @@ html, body {
 
   .row {
     margin-bottom: 30px;
+
+    a {
+      color: #fff;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
   .email {
@@ -637,7 +645,8 @@ video {
         height: 105px;
         line-height: 105px;
         color: @main-color;
-        width: 33.3333333%;
+        // width: 33.3333333%;
+        width: 100%;
         font-size: 24px;
         text-align: center;
         border-bottom: 1px solid @main-color;
