--- a/src/styles/pc-main.less
+++ b/src/styles/pc-main.less
@@ -153,7 +153,7 @@ html, body {
 
   .email {
     color: #FFF;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: normal;
   }
 
@@ -169,6 +169,22 @@ html, body {
     li {
       display: inline-block;
       margin-left: 10px;
+    }
+
+    a {
+      position: relative;
+    }
+  
+    .qr {
+      position: absolute;
+      width: 500px;
+      height: 100px;
+      top: -180px;
+      right: 0px;
+
+      img {
+        width: 150px;
+      }
     }
   }
 
@@ -226,6 +242,22 @@ html, body {
     li {
       display: inline-block;
       margin-right: 16px;
+    }
+
+    a {
+      position: relative;
+
+      &:hover .qr {
+        display: block;
+      }
+    }
+
+    .qr {
+      position: absolute;
+      width: 100px;
+      top: -130px;
+      left: -45px;
+      display: none;
     }
   }
 
@@ -771,6 +803,7 @@ video {
 
     .result-other {
       min-height: 800px;
+      padding-bottom: 30px;
       //display: none;
 
       .result {
