--- a/src/styles/mobile-main.less
+++ b/src/styles/mobile-main.less
@@ -154,7 +154,7 @@ html, body {
         margin-bottom: 20px;
         a {
             color: #fff;
-            font-size: 16px;
+            font-size: 18px;
       
             &:hover {
               text-decoration: underline;
@@ -185,31 +185,18 @@ html, body {
     ul.share {
         //text-align: right;
         margin: 20px 0 15px 0;
+        display: flex;
+        justify-content: space-between;
 
         li { 
             display: inline-block; 
-            margin-right: 24px;
+            // margin-right: 24px;
+            width: 30%;
 
             img {
-                width: 30px;
+                width: 100%;
             }
         }
-
-        a {
-            position: relative;
-          }
-        
-          .qr {
-            position: absolute;
-            width: 100vw;
-            height: 100px;
-            top: -160px;
-            left: 0px;
-      
-            img {
-              width: 30%;
-            }
-          }
     }
 
     .copyright {
@@ -264,26 +251,20 @@ html, body {
     ul.share {
         position: absolute;
         bottom: 50px;
+        // width: 100%;
+        padding-right: 20px;
+        display: flex;
+        justify-content: space-between;
 
         li { 
+            box-sizing: border-box;
             display: inline-block; 
-            margin-right: 16px;
-        }
+            width: 30%;
+            // padding: 0 10px;
 
-        a {
-            position: relative;
-      
-            &:hover .qr {
-              display: block;
+            img {
+                width: 100%;
             }
-          }
-      
-        .qr {
-            position: absolute;
-            width: 100px;
-            top: -130px;
-            left: -45px;
-            display: none;
         }
     }
 
