--- a/src/styles/pc-main.less
+++ b/src/styles/pc-main.less
@@ -556,7 +556,8 @@ video {
   }
 
   .kv {
-    height: 990px;
+    // height: 990px;
+    height: 180px;
     background-color: @main-color;
     padding-top: 30px;
     padding-bottom: 30px;
