--- a/src/styles/mobile-main.less
+++ b/src/styles/mobile-main.less
@@ -192,6 +192,9 @@ html, body {
             display: inline-block; 
             // margin-right: 24px;
             width: 30%;
+            text-align: center;
+            color: #fff;
+            font-size: 12px;
 
             img {
                 width: 100%;
@@ -261,6 +264,9 @@ html, body {
             display: inline-block; 
             width: 30%;
             // padding: 0 10px;
+            text-align: center;
+            color: @main-color;
+            font-size: 10px;
 
             img {
                 width: 100%;
