--- a/src/styles/pc-main.less
+++ b/src/styles/pc-main.less
@@ -164,11 +164,14 @@ html, body {
   }
 
   ul.share {
-    text-align: right;
+    text-align: left;
 
     li {
       display: inline-block;
-      margin-left: 10px;
+      margin-right: 10px;
+      text-align: center;
+      color: #fff;
+      font-size: 13px;
     }
 
     img {
@@ -234,6 +237,9 @@ html, body {
         // width: 30%;
         // padding: 0 10px;
         flex-grow: 1;
+        text-align: center;
+        color: @main-color;
+        font-size: 10px;
 
         img {
             width: 100%;
